syntax="proto3";

package user_service;

option go_package = "../../api/proto/";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
    // Authentication
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc Logout(LogoutRequest) returns (google.protobuf.Empty);

    // Profile management
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
    rpc DeleteProfile(DeleteProfileRequest) returns (google.protobuf.Empty);

    // User management (admin only)
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUserRole(UpdateUserRoleRequest) returns (google.protobuf.Empty);
    rpc DeactivateUser(DeactivateUserRequest) returns (google.protobuf.Empty);
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ADMIN = 2;
  ROLE_MODERATOR = 3;
}

enum UserStatus {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_INACTIVE = 2;
  STATUS_SUSPENDED = 3;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  Role role = 6;
  UserStatus status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp last_login = 10;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}


message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}


message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string token = 1;
}


// Profile management requests/responses
message GetProfileRequest {
  string token = 1;
}

message GetProfileResponse {
  User user = 1;
}

message UpdateProfileRequest {
  string token = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
}

message UpdateProfileResponse {
  User user = 1;
}

message ChangePasswordRequest {
  string token = 1;
  string current_password = 2;
  string new_password = 3;
}

message DeleteProfileRequest {
  string token = 1;
  string password = 2;
}


// Admin requests/responses
message ListUsersRequest {
  string token = 1;
  int32 page = 2;
  int32 page_size = 3;
  string search = 4;
  Role role_filter = 5;
  UserStatus status_filter = 6;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetUserRequest {
  string token = 1;
  string user_id = 2;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRoleRequest {
  string token = 1;
  string user_id = 2;
  Role role = 3;
}

message DeactivateUserRequest {
  string token = 1;
  string user_id = 2;
}